refactor: ソースコードの構造化とクライアントバンドルの導入
- src/ を client, server, utils にディレクトリ分割し、役割を明確化
- サーバー側：Room管理とSyncEngineを分離し、可読性を向上
- クライアント側：Network, Binding, Coreを分離
- ブラウザ導入を容易にする src/client.bundle.js (All-in-One版) を作成
- 共通ユーティリティ (src/utils) によるID生成・ロギングの統一
- ドキュメントとサンプルを新構造に合わせて全面的に更新

--- a/examples/index.html
+++ b/examples/index.html
@@ -25,7 +25,8 @@
         <p>こんにちは、<span cv-bind="username">誰か</span>さん！</p>
     </div>
 
-    <script src="../src/client.js"></script>
+    <!-- バンドル版を1つ読み込むだけ -->
+    <script src="../src/client.bundle.js"></script>
     <script>
         // JSはこれだけ。表示に関する命令は一切なし。
         const cv = new CloudVar('ws://localhost:8080', { room: 'zero-code-room' });
