feat: ビルドシステムの導入とクライアントSDKの配布用最適化
- scripts/build.js を作成し、クライアントソースを dist/cloudvar.js に統合する仕組みを構築
- npm run build コマンドを追加
- 手動管理の src/client.bundle.js を廃止
- サンプルとドキュメントの参照先を dist/cloudvar.js に変更

--- a/examples/index.html
+++ b/examples/index.html
@@ -38,8 +38,8 @@
         </button>
     </div>
 
-    <!-- バンドル版を読み込む -->
-    <script src="../src/client.bundle.js"></script>
+    <!-- ビルドされたSDKを読み込む -->
+    <script src="../dist/cloudvar.js"></script>
     <script>
         // 設定のみ。ロジックはHTMLに全て移動！
         const cv = new CloudVar('ws://localhost:5032', { room: 'logic-demo' });
