--- a/examples/index.html
+++ b/examples/index.html
@@ -24,15 +24,17 @@
         <!-- チャットログの表示 -->
         <div class="messages" cv-bind="chatLog"></div>
 
-        <form class="input-area" cv-on="submit: chatLog += nickname; chatLog += ': '; chatLog += msg; chatLog += '\n'; msg = ''">
+        <div class="input-area">
             <div class="nickname-box">
                 名前: <input type="text" cv-bind="nickname" style="flex: none; width: 100px;" placeholder="なまえ">
             </div>
             <div class="row">
-                <input type="text" cv-bind="msg" placeholder="メッセージを入力...">
-                <button type="submit">送信</button>
+                <input type="text" cv-bind="msg" placeholder="メッセージを入力..." 
+                       cv-on="submit: chatLog += nickname + ': ' + msg + '\n'; msg = ''">
+                <button type="button" 
+                        cv-on="click: chatLog += nickname + ': ' + msg + '\n'; msg = ''">送信</button>
             </div>
-        </form>
+        </div>
     </div>
 
     <script src="../dist/cloudvar.js"></script>
