docs: cloudvar.js の参照先を公式リリースURL (V2.0) に変更

--- a/examples/index.html
+++ b/examples/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <script src="../dist/cloudvar.js"></script>
+    <script src="https://github.com/psannetwork/cloudvar/releases/download/V2.0/cloudvar.js"></script>
     <script>
         const cv = new CloudVar('ws://localhost:5032', { room: 'chat-room' });
 
