--- a/examples/chat/index.html
+++ b/examples/chat/index.html
@@ -34,7 +34,7 @@
     </div>
     <script src="../cloudvar.js"></script>
     <script>
-        const cv = new CloudVar('ws://localhost:5032', { room: 'chat-room' });
+        const cv = new CloudVar('wss://cloudvar.psannetwork.net', { room: 'chat-room' });
         cv.onChange('chatLog', () => {
             const el = document.querySelector('.messages');
             el.scrollTop = el.scrollHeight;
