--- a/examples/game/index.html
+++ b/examples/game/index.html
@@ -21,7 +21,7 @@
 
     <script src="../cloudvar.js"></script>
     <script>
-        const cv = new CloudVar('ws://localhost:5032', { room: 'clicker-game' });
+        const cv = new CloudVar('wss://cloudvar.psannetwork.net', { room: 'clicker-game' });
         totalClicks = totalClicks || 0;
         
         // クライアント数の監視
