--- a/examples/todo/index.html
+++ b/examples/todo/index.html
@@ -27,7 +27,7 @@
 
     <script src="../cloudvar.js"></script>
     <script>
-        const cv = new CloudVar('ws://localhost:5032', { room: 'shared-todo' });
+        const cv = new CloudVar('wss://cloudvar.psannetwork.net', { room: 'shared-todo' });
         todoList = todoList || "・サーバーを立てる
 ";
     </script>
