--- a/examples/game/index.html
+++ b/examples/game/index.html
@@ -16,17 +16,18 @@
     <div class="counter" cv-bind="totalClicks">0</div>
     <button class="btn" cv-on="click: totalClicks++">PUSH!</button>
     <div class="status">
-        接続中のヒーロー: <span cv-bind="_clientCount">0</span>人
+        接続中のヒーロー: <span cv-local="heroCount">1</span>人
     </div>
 
     <script src="../cloudvar.js"></script>
     <script>
         const cv = new CloudVar('wss://cloudvar.psannetwork.net', { room: 'clicker-game' });
         totalClicks = totalClicks || 0;
+        heroCount = 1;
         
-        // クライアント数の監視
-        cv.onChange('_client_join', () => _clientCount = cv.clientList.length);
-        cv.onChange('_client_leave', () => _clientCount = cv.clientList.length);
+        cv.onChange('_joined', () => heroCount = cv.clientList.length);
+        cv.onChange('_client_join', () => heroCount = cv.clientList.length);
+        cv.onChange('_client_leave', () => heroCount = cv.clientList.length);
     </script>
 </body>
 </html>
