docs: マジック・チップの機能を活用したシステムデモを追加

--- a/examples/index.html
+++ b/examples/index.html
@@ -28,6 +28,10 @@
             <h3>📝 共有ToDoリスト</h3>
             <p>文字列結合 (+=) を使った、チームで使えるリストアプリ。</p>
         </a>
+        <a href="system/index.html" class="card">
+            <h3>🛰 システム・チップ</h3>
+            <p>ID, TIME, COUNT, ALERT などの魔法のキーワードを使いこなすデモ。</p>
+        </a>
     </div>
 </body>
 </html>
