fix: サンプル内の undefined 表示問題を解消し、初期化ロジックを最適化

--- a/examples/chat/index.html
+++ b/examples/chat/index.html
@@ -39,8 +39,10 @@
             const el = document.querySelector('.messages');
             el.scrollTop = el.scrollHeight;
         });
-        if (typeof nickname === 'undefined' || nickname === null) nickname = "ゲスト" + Math.floor(Math.random() * 1000);
-        if (typeof chatLog === 'undefined' || chatLog === null) chatLog = "--- チャットへようこそ ---\n";
+        
+        // 🌟 初期化
+        nickname = "ゲスト" + Math.floor(Math.random() * 1000);
+        chatLog = chatLog || "--- チャットへようこそ ---\n";
         msg = "";
     </script>
 </body>
